--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "httpdispatcher": "*",
-    "cheerio": "*"
+    "cheerio": "*",
+    "request": "*"
   }
 }
